--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="wrapper">
 
         <div class="wave">
-            <img src="/Images/bg.png" alt="Background Image">
+            <img src="Images/bg.png" alt="Background Image">
         </div>
         <!-- Navbar  -->
         <nav>
@@ -43,13 +43,13 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="/Images/img1.png" alt="Image1">
+                            <img src="Images/img1.png" alt="Image1">
                         </div>
                         <div class="swiper-slide">
-                            <img src="/Images/img2.png" alt="Image2">
+                            <img src="Images/img2.png" alt="Image2">
                         </div>
                         <div class="swiper-slide">
-                            <img src="/Images/img3.png" alt="Image3">
+                            <img src="Images/img3.png" alt="Image3">
                         </div>
 
                     </div>
@@ -69,7 +69,7 @@
         <div class="right">
             <div class="box">
                 <div class="image">
-                    <img src="/Images/img4.png" alt="Image4">
+                    <img src="Images/img4.png" alt="Image4">
                 </div>
                 <div class="inner-box">
                     <h3>100% Organic</h3>
@@ -78,7 +78,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="/Images/img5.png" alt="Image4">
+                    <img src="Images/img5.png" alt="Image4">
                 </div>
                 <div class="inner-box">
                     <h3>Not Expensive</h3>
@@ -87,7 +87,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="/Images/img6.png" alt="Image4">
+                    <img src="Images/img6.png" alt="Image4">
                 </div>
                 <div class="inner-box">
                     <h3>Super Healthy</h3>
