--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/0a07d9b59c.js" crossorigin="anonymous"></script>
 
     <!-- For Favicon-icon -->
-    <link rel="icon" href="/Images/favicon.ico">
+    <link rel="icon" href="Images/favicon.ico">
 
 </head>
 <body>
